fix: corregir flujo completo Device Farm - Runner → Backend → Dashboard
Diagnóstico completado (7 root causes):
1. JAR nunca compilado + start-runner.bat requería Maven obligatorio
2. ADB no en PATH → descubrimiento silencioso fallaba
3. @PutMapping vs httpPost (POST) mismatch → 405 en updateDeviceStatus
4. CORS sin localhost:5173 → bloqueado en dev local con Vite
5. Sin @Scheduled → markOfflineIfStale() solo on-demand, nunca periódico
6. RunnerConfig.env() ignoraba -Dkey=value JVM system properties
7. Sin heartbeat inmediato al arrancar → Runner aparecía offline

Correcciones:
- start-runner.bat/.sh: Maven opcional (usa JAR si existe), ADB auto-detect
  en ANDROID_HOME + rutas comunes SDK, RUNNER_ID y RUNNER_PLATFORM explícitos
- BackendClient: findAdb() busca ANDROID_HOME, rutas comunes Win/Mac/Linux;
  ProcessBuilder reemplaza Runtime.exec() (evita deadlock); getFriendlyName()
  via ro.product.model para nombre correcto del dispositivo
- RunnerAgent: heartbeat + registerDevices inmediato en startup (antes del
  scheduler), print diagnóstico ADB si 0 dispositivos
- RunnerConfig.env(): lee System.getProperty() primero, luego System.getenv()
- BackendApplication: @EnableScheduling activado
- StaleCleanupService: @Scheduled(fixedDelay=30s) llama markOfflineIfStale()
- DeviceController: @PutMapping → @PostMapping en /status
- CorsConfig: añade PUT, PATCH, exposeHeaders X-Runner-Command
- application.properties: CORS default incluye localhost:5173
- HealthController: nuevo endpoint GET /api/diagnostics con runner count,
  device count, last heartbeat y hint de diagnóstico

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>